package edu.fiuba.algo3.Plots;

import edu.fiuba.algo3.TypeData.Coordinate.Coordinate;

public class FinalGangway extends Gangway {

    public FinalGangway(Coordinate coordinate){
        super(coordinate);
    }

    public String getName(){
        return "Final Gangway";
    }

}


