package edu.fiuba.algo3.Plots;

import edu.fiuba.algo3.TypeData.Coordinate.Coordinate;

public class InitialGangway extends Gangway {

    public InitialGangway(Coordinate coordinate){
        super(coordinate);
    }

    public String getName(){
        return "Initial Gangway";
    }
}
